<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="project_number">329875651575</string>

    <string name="flurry_app_key">9ZWYC87ZBY24B9SJT4KY</string>

    <string name="mobile_app_tracking_advertiser_id">15520</string>
    <string name="mobile_app_tracking_conversion_key">f7736f1cdc49b3723ca359bf12f228de</string>

    <string name="vk_id">4739637</string>
    <string name="vk_secret">BDMI2dCGJltlLmOYTBMD</string>
    <string name="referrer_app_link">http://appbonus.ru/?referrer_id=%1$s</string>
    <string name="referrer_link">http://appbonus.ru/?referrer_id=%1$s</string>
    <string name="promo_link">http://appbonus.ru/?promo_code=%1$s</string>
    <string name="my_web_cab_link">http://appbonus.ru/my</string>
    <string name="app_bonus_mail">mail@appbonus.ru</string>

    <string name="name_db">app_bonus.db</string>
    <string name="models">
        com.appbonus.android.model.Question
    </string>

    <string name="app_name">AppBonus</string>

    <string name="promo_text">Качай игры и приложения из AppBonus - получай от 5 до 150 рублей! Установи по ссылке %1$s, введи промо-код: %2$s и получи %3$s сразу после регистрации! Проверено, работает)</string>
    <string name="rouble_1">рубль</string>
    <string name="rouble_2">рубля</string>
    <string name="rouble_3">рублей</string>

    <string name="promo_text_twitter">AppBonus платит за установку приложений! Качай по ссылке %1$s введи код %2$s и сразу получи %3$s рублей! Проверено, работает</string>

    <string name="login_caption">Ваш email</string>
    <string name="phone_caption">Ваш номер телефона</string>
    <string name="password_caption">Пароль</string>
    <string name="registration">Регистрация</string>
    <string name="to_register">Зарегистрироваться</string>
    <string name="enter">Войти</string>
    <string name="forgot_password">Напомнить пароль</string>
    <string name="wrong_mail">Некорректный e-mail</string>
    <string name="input_mail">Введите почту</string>
    <string name="input_password">Введите пароль</string>
    <string name="wrong_phone">Некорректный телефон</string>
    <string name="input_mail_or_phone">Введите почту или номер телефона</string>
    <string name="loading">Загрузка</string>
    <string name="profile">Профиль</string>
    <string name="faq">FAQ</string>
    <string name="exit">Выйти</string>
    <string name="country_caption">Страна</string>
    <string name="new_password_caption">Новый пароль</string>
    <string name="confirm_password_caption">Повторите пароль</string>
    <string name="save">Сохранить</string>
    <string name="change_password">Изменить пароль</string>
    <string name="password_are_not_confirmed">Пароли не совпадают</string>
    <string name="password_changing">Изменение пароля</string>
    <string name="main_info">Основная информация</string>
    <string name="phone_was_not_confirmed">Не подтвержден</string>
    <string name="confirm_phone"><![CDATA[Подтвердить номер телефона]]></string>
    <string name="confirm_phone_short"><![CDATA[Подтвердить номер]]></string>

    <string name="russia">Россия</string>
    <string name="belarus">Беларусь</string>
    <string name="ukraine">Украина</string>
    <string name="reset_password_caption">Мы отправили вам на почту\nписьмо с паролем, введите его ниже</string>
    <string name="faq_message">Мы получим ваш вопрос по почте\nи тут же ответим</string>
    <string name="faq_message_caption">Задать вопрос</string>
    <string name="settings">Настройки</string>
    <string name="to_register_with_vk">Регистрация через ВК</string>
    <string name="enter_vk">Войти через ВК</string>
    <string name="phone_was_confirmed">Телефон подтвержден</string>
    <string name="notifications">Уведомления</string>
    <string name="show_push">Показывать push-уведомления</string>
    <string name="push_sound">Звук уведомлений</string>
    <string name="web_cab">Веб-кабинет</string>
    <string name="license">Пользовательское соглашение</string>
    <string name="you_entered_as">Вы вошли как</string>
    <string name="balance">Баланс</string>
    <string name="offers_caption">Скачивайте и запускайте приложения,\nчтобы получить бонусы</string>
    <string name="input_profile">Заполнить профиль</string>
    <string name="offers">Приложения</string>
    <string name="input_profile_cost">+10a</string>
    <string name="avatar">Иконка</string>
    <string name="download">Скачать приложение</string>
    <string name="first_install_step">Скачайте и сразу запустите</string>
    <string name="first_step">1</string>
    <string name="second_step">2</string>
    <string name="third_step">3</string>
    <string name="second_install_step">В процессе скачивания не должно быть разрывов связи и смены 3G/Wi-Fi</string>
    <string name="third_install_step">Бонус зачислится от 5 минут до нескольких часов</string>
    <string name="rules"><![CDATA[Подробные правила]]></string>
    <string name="bonus_info">Получите бонусы, когда кто-то\nустановит приложение по Вашей ссылке</string>
    <string name="share">Поделиться ссылкой</string>
    <string name="referrer_link_was_copied">Ссылка скопирована</string>
    <string name="edit">Изменить</string>
    <string name="app_bonus_user_question">Вопрос по AppBonus</string>

    <string name="current_balance">Текущий баланс</string>
    <string name="withdrawal_money">Вывести деньги</string>
    <string name="auto_withdrawal">Автовыплаты</string>
    <string name="my_profit">Мой доход</string>
    <string name="friend_profit">Доход от друзей</string>
    <string name="withdrawal_sum">Выплачено</string>
    <string name="history">История операций</string>
    <string name="show_more">Показать еще</string>
    <string name="amount_caption">Сумма</string>
    <string name="withdrawal_phone">Вывести на телефон</string>
    <string name="withdrawal_qiwi">Вывести на QIWI</string>
    <string name="withdrawal_title">Мобильный</string>
    <string name="empty_amount">Введите сумму</string>
    <string name="qiwi_caption">QIWI</string>
    <string name="mobile_caption">Мобильный</string>
    <string name="withdrawal_is_not_access_info">Чтобы вывести деньги, необходимо\nподтвердить номер телефона</string>
    <string name="meet_friends">Пригласить друзей</string>
    <string name="get_percent">И заработать больше</string>
    <string name="first_level">1 уровень</string>
    <string name="second_level">2 уровень</string>
    <string name="third_level">3 уровень</string>
    <string name="referrals_info">Подробнее о реферальной системе</string>
    <string name="friends">Друзья</string>
    <string name="more">Подробнее</string>
    <string name="referrals_info_text">Текст реферралки</string>
    <string name="new_referral_system">Новая\nреферальная система</string>
    <string name="referral_system_text">Приглашайте друзей и получайте\nпассивный доход от их заработка</string>
    <string name="friend_profit_ref">от доходов друзей</string>
    <string name="friend_friend_profit_ref">от доходов\nдрузей друзей</string>
    <string name="friend_friend_friend_profit_ref">от доходов друзей\n3-го уровня</string>
    <string name="to_meet">Пригласить</string>
    <string name="friends_info">Поделитесь промо-кодом с друзьями\nи они получат бонус при регистрации</string>
    <string name="meeting_subject">meeting_subject</string>
    <string name="share_chooser_text">Выберите приложение, чтобы поделиться</string>
    <string name="human_count">%1$s чел.</string>
    <string name="empty">Ничего нет</string>
    <string name="no_offers">Пока для вас\nнет активных приложений</string>
    <string name="balance_withdrawal_money">Вывод денег</string>
    <string name="balance_profit">Бонус за %1$s</string>
    <string name="in_progress">В процессе</string>
    <string name="failed">Не выполнено</string>
    <string name="success">Выполнено успешно</string>
    <string name="re_enter">Произошла непредвиденная ошибка - перезайдите в свой профиль</string>
    <string name="password_was_changed">Пароль успешно изменен</string>
    <string name="input_phone">Введите номер телефона</string>
    <string name="network_problem">Кажется, нет интернета :(\nНажми на экран, чтобы попробовать ещё раз!</string>
    <string name="promo_caption">Промо-код (если есть)</string>
    <string name="promo">Промо-код:</string>
    <string name="code_caption">Код</string>
    <string name="sms_was_went">Мы отправили вам смс с кодом,\nвведите его ниже</string>
    <string name="confirm_phone_info_1">Если в течение 15 минут код не пришел,</string>
    <string name="confirm_phone_info_2">обратитесь в службу поддержки</string>
    <string name="tech_support" />
    <string name="error">Ошибка</string>
    <string name="confirm_title">Ваш номер</string>
    <string name="name_caption">Ваше имя</string>
    <string name="birthdate_caption">Ваша дата рождения</string>
    <string name="sex_caption">Ваш пол</string>
    <string name="sex_male">Мужской</string>
    <string name="sex_female">Женский</string>
    <string name="you_has_rooted_device">Использование AppBonus на устройстве с root-доступом запрещено</string>
    <string name="you_has_unreal_device">Использование AppBonus на эмуляторе запрещено</string>
    <string name="meet_friends_title">Получай дополнительный доход\nот каждого выполненного\nдрузьями задания</string>
    <string name="meet_friends_promo">Отправь промо-код другу,\nи он получит %1$s\nпри регистрации,\nа ты - дополнительный доход</string>
    <string name="copy_that_link">Скопируй ссылку на приложение\nсо своим промо-кодом</string>
    <string name="roubles">рублей</string>
    <string name="indicate_phone_number">Укажите номер телефона</string>
    <string name="current_password_caption">Текущий пароль</string>
    <string name="current_password_inputed_wrongly">Текущий пароль введен неверно</string>
    <string name="sharing_does_not_available">Этим приложением нельзя поделиться</string>
    <string name="wrong_login_or_password">Неверный логин или пароль</string>
    <string name="wrong_login">Пользователя с таким логином не существует</string>
    <string name="password_repair_letter_was_sent">В течение нескольких минут вы получите письмо с инструкциями по восстановлению вашего пароля.</string>
    <string name="your_app_is_too_old">Используемая вами версия приложения устарела. Для получения возможности использования новых функций советуем обновить</string>
    <string name="menu_cancel">Нет, спасибо</string>
    <string name="menu_ok">Наконец-то</string>
    <string name="update_error">При обновлении что-то пошло не так</string>

</resources>
