<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item
            android:title="@string/offers"
            android:id="@id/offers"
            app:showAsAction="never" />
        <item
            android:title="@string/balance"
            android:id="@id/balance"
            app:showAsAction="never" />
        <item
            android:title="@string/friends"
            android:id="@id/friends"
            app:showAsAction="never" />
        <item
            android:title="@string/profile"
            android:id="@id/profile"
            app:showAsAction="never" />
        <item
            android:title="@string/faq"
            android:id="@id/faq"
            app:showAsAction="never" />
        <item
            android:title="@string/exit"
            android:id="@id/exit"
            app:showAsAction="never" />
    </group>
</menu>