<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/card"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            style="@style/profile_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_push"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/show_push"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/push_sound"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@id/push_sound"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/button_setting"
        android:text="@string/web_cab"
        android:id="@id/web_cab"/>

    <Button
        style="@style/button_setting"
        android:text="@string/faq"
        android:id="@id/faq"/>

    <Button
        style="@style/button_setting"
        android:text="@string/license"
        android:id="@id/license"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/you_entered_as"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@id/enter_as"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </LinearLayout>

    <Button
        style="@style/button_setting"
        android:text="@string/exit"
        android:id="@id/exit"/>
</LinearLayout>