<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/step_number"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:text="@string/first_step"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="16sp"/>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_install_step"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/step_number"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:text="@string/second_step"
                android:gravity="center"
                android:textSize="16sp"/>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_install_step"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/step_number"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:text="@string/third_step"
                android:gravity="center"
                android:textSize="16sp"/>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/third_install_step"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>