<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="10dp">

        <com.appbonus.android.component.FloatLabel
            android:id="@id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_caption"
            android:inputType="textEmailAddress"
            android:layout="@layout/default_float_label_white_hint"/>

        <com.appbonus.android.component.FloatLabel
            android:id="@id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_caption"
            android:inputType="phone"
            android:layout="@layout/default_float_label_white_hint"/>

        <com.appbonus.android.component.FloatLabel
            android:id="@id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_caption"
            android:inputType="textPassword"
            android:layout="@layout/default_float_label_white_hint"/>

        <Button
            style="@style/login_button"
            android:onClick="registerHandler"
            android:text="@string/to_register"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            style="@style/vk_login_button"
            android:layout_marginTop="10dp"
            android:onClick="registerVkHandler">

            <ImageView
                android:id="@id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/vk_icon"
                android:layout_marginRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_register_with_vk"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="5dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>