<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/content"
        android:src="@drawable/logo"
        android:layout_marginBottom="16dip"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp">

        <com.appbonus.android.component.FloatLabel
            android:id="@id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_caption"
            android:inputType="textEmailAddress"
            android:layout="@layout/default_float_label_white_hint" />

        <com.appbonus.android.component.FloatLabel
            android:id="@id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_caption"
            android:inputType="textPassword"
            android:layout="@layout/default_float_label_white_hint" />

        <Button
            style="@style/login_button"
            android:layout_marginTop="10dp"
            android:onClick="enterHandler"
            android:text="@string/enter" />

        <LinearLayout
            style="@style/vk_login_button"
            android:layout_marginTop="10dp"
            android:onClick="enterVkHandler">

            <ImageView
                android:id="@id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:src="@drawable/vk_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/enter_vk"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="registerHandler"
            android:text="@string/registration"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="resetPasswordHandler"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>