<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reset_password_caption" />

        <com.appbonus.android.component.FloatLabel
            android:id="@id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password_caption"
            android:inputType="textPassword" />

        <Button
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="resetPasswordHandler"
            android:text="@string/enter" />
    </LinearLayout>
</RelativeLayout>